# OctoPrint-ShutdownPrinter

./: Issues.txt  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
octoprint_shutdownprinter/: __init__.py
octoprint_shutdownprinter/static/css/: shutdownprinter.css
octoprint_shutdownprinter/static/js/: shutdownprinter.js
octoprint_shutdownprinter/templates/: shutdownprinter_settings.jinja2  shutdownprinter_sidebar.jinja2
